[fix](common) replace readAllBytes which not supported in jdk8 (#43565)
### What problem does this PR solve?

Related PR: #43516

Problem Summary:

GZIPInputStream.readAllBytes is introduced in JDK 9, so this PR replaces
readAllBytes by IOUtils.toByteArray